--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,9 +7,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: private repo creation
-        uses: sarthakjdev/autorepo-create-on-pullrequest@auto-repo-creation
+        uses: sarthakjdev/autorepo-create-on-pullrequest@auto-repo-creation-prerelease2
         with:
           organization: workflow-testing-org
           repo-token: ${{ secrets.GITHUB_TOKEN }}
     env:
          TOKEN: ${{ secrets.TOKEN }}
+
