--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: private repo creation
-        uses: sarthakjdev/autorepo-create-on-pullrequest@prelease-test-3
+        uses: sarthakjdev/autorepo-create-on-pullrequest@pre-release-test-4
         with:
           organization: workflow-testing-org
           repo-token: ${{ secrets.GITHUB_TOKEN }}
