--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: auto repo creator on pull request
-        uses: sarthakjdev/auto-repo-creator-on-pullRequest@testing
+        uses: sarthakjdev/auto-repo-creator-on-pullRequest@pre-release
         with:
           organization: workflow-testing-org
           repo-token: ${{ secrets.GITHUB_TOKEN }}
