--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: auto repo creator on pull request
-        uses: sarthakjdev/autorepo-create-on-pullrequest@work
+        uses: sarthakjdev/autorepo-create-on-pullrequest@pre-release-test-9
         with:
           organization: workflow-testing-org
           repo-token: ${{ secrets.GITHUB_TOKEN }}
